# trawling-traders

./: .dockerignore  .gitignore  AUDIT_SUMMARY.md  AUDIT_TODO.md  Makefile  README.md  docker-compose.yml  package-lock.json  package.json
.github/workflows/: deploy.yml
apps/mobile/: App.tsx  app.json  babel.config.js  index.js  metro.config.js  package.json
apps/mobile/src/: polyfills.ts  theme.ts
apps/mobile/src/api/: ApiProvider.tsx  index.ts
apps/mobile/src/components/: AnimatedBotCard.tsx  AnimatedCard.tsx  ErrorBoundary.tsx  OceanBackground.tsx
apps/mobile/src/config/: api.ts
apps/mobile/src/context/: NetworkContext.tsx
apps/mobile/src/hooks/: index.ts  useBots.ts  usePrices.ts
apps/mobile/src/navigation/: AppNavigator.tsx
apps/mobile/src/screens/: AuthScreen.tsx  BotDetailScreen.tsx  BotSettingsScreen.tsx  BotsListScreen.tsx  CreateBotScreen.tsx  ProfileScreen.tsx  SubscribeScreen.tsx
apps/mobile/src/store/: index.ts
apps/mobile/src/utils/: animations.ts
apps/mobile/stubs/: cedros-i18n-stub.js  crypto-shim.js
assets/branding/: README.md
docs/: data-sources-research.md  frontend-architecture.md  openclaw-integration.md  xstocks-data-sources.md
services/bot-runner/: Cargo.toml
services/bot-runner/src/: amount.rs  client.rs  config.rs  executor.rs  gateway.rs  intent.rs  lib.rs  main.rs  openclaw.rs  portfolio.rs  reconciler.rs  runner.rs  state.rs  tests.rs  types.rs
services/bot-runner/tests/: mock_executor.rs  paper_trading_harness.rs
services/control-plane/: .env.example  Cargo.toml  Dockerfile  README.md
services/control-plane/migrations/: 001_initial_schema.sql  002_add_agent_wallet_column.sql  003_add_bootstrap_token.sql  004_platform_config.sql  005_bot_openclaw_config.sql  006_add_user_admin_flag.sql  006_cedros_login_integration.sql
services/control-plane/scripts/: trawler-bootstrap.sh
services/control-plane/src/: alerting.rs  config.rs  health.rs  lib.rs  main.rs  observability.rs  provisioning.rs  secrets.rs  user_data.rs  webhook.rs
services/control-plane/src/algorithms/: breakout.rs  mean_reversion.rs  mod.rs  signal.rs  trend.rs
services/control-plane/src/brain/: config.rs  engine.rs  factors.rs  mod.rs  presets.rs  signal.rs
services/control-plane/src/cedros/: login.rs  mod.rs  pay.rs
services/control-plane/src/cedros/login/: login_migrations.rs  mod.rs
services/control-plane/src/db/: mod.rs
services/control-plane/src/handlers/: admin.rs  bots.rs  mod.rs  openclaw_config.rs  simulate.rs  sync.rs
services/control-plane/src/middleware/: admin.rs  auth.rs  mod.rs  rate_limit.rs  subscription.rs
services/control-plane/src/models/: mod.rs
services/data-retrieval/: Cargo.toml  Dockerfile
services/data-retrieval/src/: handlers.rs  lib.rs  main.rs  types.rs
services/data-retrieval/src/aggregators/: mod.rs
services/data-retrieval/src/cache/: mod.rs
services/data-retrieval/src/normalizers/: mod.rs
services/data-retrieval/src/sources/: binance_ws.rs  coingecko.rs  forex_commodities.rs  pyth.rs
