[package]
name = "control-plane"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database - sqlx 0.8 with bigdecimal support
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "migrate", "uuid", "chrono", "bigdecimal"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }

# Tracing
tracing = "0.1"
tracing-subscriber = "0.3"

# Configuration
config = "0.13"

# Validation
validator = { version = "0.16", features = ["derive"] }

# Password hashing (for API keys)
argon2 = "0.5"

# JWT
jsonwebtoken = "9.2"

# HTTP client (for DigitalOcean API)
reqwest = { version = "0.11", features = ["json"] }

# Crypto (for secrets)
aes-gcm = "0.10"
base64 = "0.21"
hex = "0.4"

# Solana wallet validation
bs58 = "0.5"

# Decimal for prices - use rust_decimal for logic, bigdecimal for sqlx DB
rust_decimal = { version = "1.40", features = ["serde", "maths"] }
bigdecimal = { version = "0.4", features = ["serde"] }

# Cedros Pay integration - embedded payments with auto-migration
cedros-pay = "1.1.4"

# Cedros Login integration - embedded auth server with auto-migration
cedros-login-server = { version = "0.0.5", features = ["postgres"] }

# RSA key generation (shared JWT signing key for cedros-login + our auth middleware)
rsa = "0.9"

# DigitalOcean provisioning - SQLx 0.8 compatible
claw-spawn = "0.1.2"
rand = "0.8"

# Shared types
data-retrieval = { path = "../data-retrieval" }

[dev-dependencies]
tokio-test = "0.4"
