[package]
name = "data-retrieval"
version = "0.1.0"
edition = "2021"

[dependencies]
# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Decimal for prices
rust_decimal = { version = "1.32", features = ["serde"] }

# Redis for caching
redis = { version = "0.23", features = ["tokio-comp"] }

# WebSocket for real-time feeds
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }

# URL parsing
url = "2.4"

# Async traits
async-trait = "0.1"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Configuration
config = "0.13"
dotenvy = "0.15"

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.5"
