[package]
name = "data-retrieval"
version = "0.1.0"
edition = "2021"

[dependencies]
# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# HTTP server (for API)
axum = "0.7"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling - match cedros-pay versions
anyhow = "1.0.86"
thiserror = "1.0.63"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Decimal for prices - updated for sqlx 0.8 compatibility
rust_decimal = { version = "1.35", features = ["serde"] }

# Redis for caching
redis = { version = "0.25", features = ["tokio-comp"] }

# WebSocket for real-time feeds
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures = "0.3"

# URL parsing
url = "2.4"

# Async traits
async-trait = "0.1"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Configuration
config = "0.14"
dotenvy = "0.15"

# Static maps (for Pyth feed IDs)
phf = { version = "0.11", features = ["macros"] }

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.6"
